maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:57: error: ';' expected but ')' found.
    else if (getIndication(x-1,y)) > cpt){
                                        ^